<resources>
    <string name="app_name">Puremetry</string>
    <string name="startButton">Start</string>
    <string name="resultsButton">Results</string>
    <string name="calibrationButton">Calibration</string>
    <string name="nameLabel">Name</string>
    <string name="dobLabel">Date Of Birth (dd/MM/yyyy)</string>
    <string name="nricLabel">NRIC/FIN</string>
    <string name="doneButton">Done</string>
    <string name="inputLabel">Input</string>
    <string name="submitButton">Submit</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="continueButton">Continue</string>
    <string name="responseButton">I heard it</string>
    <string name="instructionText">Press the button as soon as you hear each beep, even if it is soft.</string>
    <string name="hearingLossText">This shows your hearing loss level.</string>
    <string name="recommendationText">This shows your recommendation.</string>
    <string name="frequencyText">Ear Frequency</string>
    <string name="returnButton">Return</string>
</resources>